Update1 main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./user-service
+          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/user-service:latest
 
       # 4. Build and push Task Service
@@ -33,6 +34,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./task-service
+          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/task-service:latest
 
       # 5. Build and push Gateway Service
@@ -40,4 +42,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./gateway-service
+          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/gateway-service:latest
