--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,39 @@
-name: CI/CD Pipeline - Build & Push Docker Images
+name: CI/CD Pipeline - Microservices (Single Repo)
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      # 3. Build and push User Service
-      - name: Build and push user-service
-        uses: docker/build-push-action@v4
-        with:
-          context: ./user-service
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/user-service:latest
+      # Build & Push User Service
+      - name: Build & Push user-service
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/microservices:user-service-latest ./user-service
+          docker push ${{ secrets.DOCKER_USERNAME }}/microservices:user-service-latest
 
-      # 4. Build and push Task Service
-      - name: Build and push task-service
-        uses: docker/build-push-action@v4
-        with:
-          context: ./task-service
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/task-service:latest
+      # Build & Push Task Service
+      - name: Build & Push task-service
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/microservices:task-service-latest ./task-service
+          docker push ${{ secrets.DOCKER_USERNAME }}/microservices:task-service-latest
 
-      # 5. Build and push Gateway Service
-      - name: Build and push gateway-service
-        uses: docker/build-push-action@v4
-        with:
-          context: ./gateway-service
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/gateway-service:latest
+      # Build & Push Gateway Service
+      - name: Build & Push gateway-service
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/microservices:gateway-service-latest ./gateway-service
+          docker push ${{ secrets.DOCKER_USERNAME }}/microservices:gateway-service-latest
